# xaop

./: CHANGES  CMakeLists.txt  CREDITS  Document.md  LICENSE  README.md  classes.c  config.m4  config.w32  install  php_xaop.h  xaop.c  xaop.php
demos/: annotation_aop_demo1.php  annotation_aop_demo2.php  injection_aop_demo1.php  injection_aop_demo2.php  injection_aop_demo3.php  injection_aop_demo4.php
kernel/: classes.c  exec.c  exec.h  helper.c  helper.h  parsing.c  xaop.c  xaop.h
kernel/annotation/: annotation.c  annotation.h
kernel/annotations/: annotation.c  annotation.h
kernel/aop/: exec.c  exec.h  xaop.c  xaop.h
kernel/common/: anno_parsing.c  anno_parsing.h  helper_lib.c  helper_lib.h
kernel/db/: adapter.c  adapter.h
kernel/interface/: annotation.c  annotation.h
kernel/loader/: loader.c  loader.h
kernel/mvc/: app.c  app.h  controller.c  controller.h  model.c  model.h  request.c  request.h  session.c  session.h  view.c  view.h
phpstorm/: Annotation.php  Annotations.php  App.php  Doc.php  Loader.php  Xaop.php
